# ChineseChess-CLI

./: Cargo.toml  README.md
chess_client/: Cargo.toml  Server.toml
chess_client/src/: config.rs  data_model.rs  display.rs  main.rs  server_comm.rs
chess_client/src/display/: board_widget.rs  command_exec.rs  match_board_widget.rs  view_model.rs
chess_client/src/display/board_widget/: default_board.rs
chess_datagram/: Cargo.toml
chess_datagram/src/: lib.rs  packet.rs  payload.rs
chess_datagram/src/packet/: client.rs  server.rs
chess_datagram/src/payload/: client.rs  server.rs
chess_model/: Cargo.toml
chess_model/src/: board.rs  chess_move.rs  lib.rs  piece.rs
chess_model/src/board/: board_position.rs  default_board.rs  initial_positions.rs
chess_model/src/chess_move/: move_checker.rs  move_parser.rs  piece_finder.rs
chess_model/src/chess_move/move_checker/: move_target.rs  tests.rs
chess_model/src/piece/: name.rs
chess_server/: Cargo.toml  Server.toml
chess_server/src/: config.rs  dispatcher.rs  main.rs  model.rs
chess_server/src/dispatcher/: handler.rs
chess_server/src/dispatcher/handler/: matching.rs  user.rs
chess_server/src/model/: matching.rs  user.rs
