[package]
name = "chess_model"
version = "0.1.0"
authors = ["WunschUnreif <wunschunreif@sjtu.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.14.0"
strum = "0.20.0"
strum_macros = "0.20.0"
regex = "1.4.3"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
