[package]
name = "chess_server"
version = "0.1.0"
authors = ["WunschUnreif <wunschunreif@sjtu.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess_model = {path = "../chess_model/"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
